chore: added private to package.json for ak-common
affects: ak-common

--- a/packages/ak-common/package.json
+++ b/packages/ak-common/package.json
@@ -8,6 +8,7 @@
     "prepublish": "cd .. && npm run prepublish/single ak-common",
     "pre-release": "lerna-semantic-release pre"
   },
+  "private": true,
   "files": [
     "dist"
   ],
