--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "karma-mocha": "^1.0.1",
     "karma-sauce-launcher": "1.0.0",
     "karma-webpack": "^1.7.0",
-    "lerna": "jpnelson/lerna#config-concurrency-committed-lib-with-exec",
+    "lerna": "atlassian/lerna#config-concurrency-committed-lib-with-exec",
     "lerna-semantic-release": "^1.0.5",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
