feat: quick spike on avatars and shared resources
affects: ak-avatar, ak-base-component, ak-common

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
+  "dependencies": {
+    "skatejs": "0.14.2"
+  },
   "engines": {
     "npm": ">=3.8",
     "node": ">=6.1"
