--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "camelcase": "^3.0.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "css-loader": "^0.23.1",
+    "cucumber": "^1.0.0",
     "cz-conventional-changelog": "^1.1.6",
     "cz-lerna-changelog": "0.2.0",
     "eslint": "^2.10.2",
@@ -20,6 +23,7 @@
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-mocha": "^2.2.0",
+    "eslint-plugin-protractor": "^1.8.0",
     "eslint-plugin-react": "^5.1.1",
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
@@ -39,7 +43,8 @@
     "minimist": "1.2.0",
     "mocha": "^2.4.5",
     "precommit-hook": "^3.0.0",
-    "protractor-cucumber": "^0.1.8",
+    "protractor": "^3.3.0",
+    "protractor-cucumber-framework": "^0.6.0",
     "raw-loader": "^0.5.1",
     "semantic-release": "6.2.2",
     "skatejs-named-slots": "^0.2.0",
@@ -77,6 +82,7 @@
   },
   "scripts": {
     "clean": "./node_modules/.bin/lerna exec -- rm -rf node_modules dist && rm -rf node_modules",
+    "cucumber/single": "./build/bin/cucumber.single.sh",
     "dev/single": "./build/bin/dev.single.sh",
     "dev/single/integration": "./build/bin/dev.single.integration.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
