refactor: use global eslintrc for cucumber tests

--- a/packages/atlas-animation/cucumber/stepDefinitions/.eslintrc
+++ b/packages/atlas-animation/cucumber/stepDefinitions/.eslintrc
@@ -1,15 +1,3 @@
 {
-  "extends": [
-    "../../../../.eslintrc",
-    "plugin:protractor/recommended"
-  ],
-  "rules": {
-    "new-cap": ["error", { "capIsNewExceptions": ["When", "Then", "Given", "After"] }]
-  },
-  "env": {
-    "protractor": true,
-  },
-  "plugins": [
-    "protractor"
-  ]
+  "extends": "../../../../build/lib/cucumber.eslintrc"
 }
