--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "karma-mocha": "^1.0.1",
     "karma-sauce-launcher": "1.0.0",
     "karma-webpack": "^1.7.0",
-    "lerna": "atlassian/lerna#config-concurrency-committed-lib-with-exec",
+    "lerna": "2.0.0-beta.17",
     "lerna-semantic-release": "^1.1.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
