--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cz-lerna-changelog": "0.2.1",
     "eslint": "^2.11.1",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-friendly-formatter": "^2.0.5",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.3.0",
     "eslint-plugin-mocha": "^3.0.0",
@@ -87,7 +88,7 @@
     "dev/single": "./build/bin/dev.single.sh",
     "dev/single/integration": "./build/bin/dev.single.integration.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
-    "lint": "eslint .",
+    "lint": "eslint --format 'node_modules/eslint-friendly-formatter' .",
     "lint-changed": "./build/bin/lint-changed.sh",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg",
     "prepublish/single": "./build/bin/prepublish.single.sh",
