--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
     "karma-sauce-launcher": "1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "lerna": "2.0.0-beta.17",
     "lerna-semantic-release": "^1.1.3",
@@ -52,7 +53,7 @@
     "style-loader": "^0.13.1",
     "validate-commit-message": "^3.0.1",
     "wait-on": "^1.5.2",
-    "webcomponents.js": "^0.7.22",
+    "webcomponents.js": "skatejs/webcomponentsjs#skate-v1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
