--- a/packages/ak-common/package.json
+++ b/packages/ak-common/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "skatejs": "skatejs/skatejs#c5663a348c0f1641ffb4cacc2e2cb4981a9bc441",
+    "skatejs": "1.0.0-beta.0",
     "skatejs-named-slots": "^0.2.0"
   }
 }
