--- a/packages/treyflipped-button/package.json
+++ b/packages/treyflipped-button/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "dynamics.js": "^1.0.0",
-    "skatejs": "skatejs/skatejs#85dfbcbf7a7bb53d709719639ca7414b37769861",
-    "skatejs-named-slots": "^0.1.5"
+    "skatejs": "1.0.0-beta.0",
+    "skatejs-named-slots": "^0.2.3"
   }
 }
