--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cucumber": "^1.0.0",
     "cz-conventional-changelog": "^1.1.6",
     "cz-lerna-changelog": "0.2.1",
+    "es6-map": "^0.1.4",
     "eslint": "^2.12.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-friendly-formatter": "^2.0.5",
