refactor(build): add the code for the cz-atlaskit-changelog wrapper
affects: cz-atlaskit-changelog

--- a/packages/ak-cz-atlaskit-changelog/package.json
+++ b/packages/ak-cz-atlaskit-changelog/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cz-lerna-changelog": "^0.2.1"
+    "cz-lerna-changelog": "^0.2.1",
+    "lerna": "*"
   }
 }
