--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -5,8 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single ak-avatar",
-    "pre-release": "lerna-semantic-release pre"
+    "prepublish": "cd .. && npm run prepublish/single ak-avatar"
   },
   "private": true,
   "files": [
