chore(build): Spike Browserstack test integration
Trying out Browserstack as a potential replacement for SauceLabs. Still need to integrate tunnel
with existing CI shell scripts.

--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0",
     "karma": "^0.13.22",
+    "karma-browserstack-launcher": "^1.0.1",
     "karma-chai-plugins": "^0.7.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
-    "karma-sauce-launcher": "1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "lerna": "2.0.0-beta.17",
@@ -102,12 +102,12 @@
     "release/announce": "[ -s .released-packages ] && cat .released-packages | sed 's/^/Released /' | xargs ./build/bin/hipchat_message.sh || return 0",
     "release/changelog": "if [ -s .released-packages ]; then lerna-semantic-release post; else return 0; fi",
     "test": "./build/bin/test.sh",
-    "test/saucelabs": "./build/bin/test.saucelabs.sh",
-    "test/saucelabs/ci": "./build/bin/test.saucelabs.ci.sh",
+    "test/browserstack": "./build/bin/test.browserstack.sh",
+    "test/browserstack/ci": "./build/bin/test.browserstack.ci.sh",
     "test/single": "./build/bin/test.single.sh",
     "test/single/integration": "./build/bin/test.single.integration.sh",
     "test/single/monkey": "./build/bin/test.single.monkey.sh",
-    "test/single/saucelabs": "./build/bin/test.single.saucelabs.sh",
+    "test/single/browserstack": "./build/bin/test.single.browserstack.sh",
     "test/single/watch": "./build/bin/test.single.watch.sh",
     "validate": "npm ls >/dev/null && ./node_modules/.bin/lerna exec -- npm ls >/dev/null",
     "webpack/single": "./build/bin/webpack.single.sh"
