feat: inline dialog and layer backbone - added missing changes
affects: ak-base-component, ak-inline-dialog, ak-layer

--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "ak-common": "1.1.0",
     "ak-shared-styles": "1.0.0",
-    "ak-base-component": "*"
+    "ak-base-component": "*",
+    "ak-layer": "*",
+    "skatejs": "1.0.0-beta.2"
   }
 }
