--- a/packages/ak-layer/package.json
+++ b/packages/ak-layer/package.json
@@ -18,6 +18,7 @@
     "ak-common": "1.1.0",
     "ak-shared-styles": "1.0.0",
     "ak-base-component": "*",
-    "tether": "^1.3.2"
+    "tether": "^1.3.2",
+    "skatejs": "1.0.0-beta.2"
   }
 }
