--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0",
+    "jsdoc": "^3.4.0",
     "karma": "^0.13.22",
     "karma-chai-plugins": "^0.7.0",
     "karma-chrome-launcher": "^1.0.1",
@@ -95,6 +96,7 @@
     "dev/single": "./build/bin/dev.single.sh",
     "dev/single/integration": "./build/bin/dev.single.integration.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
+    "jsdoc": "./node_modules/.bin/jsdoc --recurse --verbose -c ./jsdoc/conf.json",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg && cd packages/ak-shared-styles && npm link && cd ../.. && ./node_modules/.bin/lerna exec ../../build/bin/remove.lerna.links.sh",
     "lint": "eslint --format 'node_modules/eslint-friendly-formatter' .",
     "lint-changed": "./build/bin/lint-changed.sh",
