feat: storybook for single components

--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "release/announce": "[ -s .released-packages ] && cat .released-packages | sed 's/^/Released /' | xargs ./build/bin/hipchat_message.sh || return 0",
     "release/changelog": "if [ -s .released-packages ]; then lerna-semantic-release post; else return 0; fi",
     "storybook": "start-storybook -p 9001",
+    "storybook/single": "./build/bin/storybook.single.sh",
     "test": "./build/bin/test.sh",
     "test/saucelabs": "./build/bin/test.saucelabs.sh",
     "test/saucelabs/ci": "./build/bin/test.saucelabs.ci.sh",
