feat: inline dialog almost styled and animated
affects: ak-inline-dialog, ak-layer

--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -19,6 +19,7 @@
     "ak-shared-styles": "1.0.0",
     "ak-base-component": "*",
     "ak-layer": "*",
-    "skatejs": "1.0.0-beta.2"
+    "skatejs": "1.0.0-beta.2",
+    "web-animations-js": "^2.2.1"
   }
 }
