fix: Fixed less imports in template.
affects: ak-util-component-template

--- a/packages/ak-util-component-template/package.json
+++ b/packages/ak-util-component-template/package.json
@@ -11,6 +11,7 @@
     "dist"
   ],
   "dependencies": {
+    "ak-util-shared-styles": "^0.0.0",
     "skatejs": "1.0.0-beta.1"
   },
   "author": "",
