--- a/packages/ak-wc-avatar/package.json
+++ b/packages/ak-wc-avatar/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "ak-util-common": "^0.0.0",
     "ak-util-shared-styles": "^0.0.0",
+    "ak-util-react": "^0.0.0",
     "skatejs": "1.0.0-beta.1"
   }
 }
