refactor(all): ak-util -> akutil, and generally match folder names to package names
affects: atlas-animation, ak-avatar, akutil-common, akutil-component-template, akutil-cz-atlaskit-changelog, akutil-polyfills, akutil-react, akutil-shared-styles, eslint-config-ak-base, eslint-config-ak-cucumber, eslint-config-ak-tests

--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -13,9 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ak-util-common": "^0.0.0",
-    "ak-util-shared-styles": "^0.0.0",
-    "ak-util-react": "^0.0.0",
+    "akutil-common": "^0.0.0",
+    "akutil-shared-styles": "^0.0.0",
+    "akutil-react": "^0.0.0",
     "skatejs": "1.0.0-beta.1"
   }
 }
