--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ak-util-common",
+  "name": "akutil-common",
   "version": "0.0.0",
   "description": "",
   "main": "dist/bundle.js",
