--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "author": "Atlassian Pty Ltd.",
   "config": {
     "commitizen": {
-      "path": "./packages/ak-util-cz-atlaskit-changelog"
+      "path": "./packages/akutil-cz-atlaskit-changelog"
     }
   },
   "devDependencies": {
-    "ak-util-polyfills": "file:./packages/ak-util-polyfills",
+    "akutil-polyfills": "file:./packages/akutil-polyfills",
     "@kadira/storybook": "^1.34.0",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
@@ -22,9 +22,9 @@
     "cz-lerna-changelog": "0.2.1",
     "eslint": "^2.13.1",
     "eslint-friendly-formatter": "^2.0.5",
-    "eslint-config-ak-base": "file:./packages/ak-util-eslint-base",
-    "eslint-config-ak-tests": "file:./packages/ak-util-eslint-tests",
-    "eslint-config-ak-cucumber": "file:./packages/ak-util-eslint-cucumber",
+    "eslint-config-ak-base": "file:./packages/eslint-config-ak-base",
+    "eslint-config-ak-tests": "file:./packages/eslint-config-ak-tests",
+    "eslint-config-ak-cucumber": "file:./packages/eslint-config-ak-cucumber",
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0",
