--- a/packages/akutil-react/package.json
+++ b/packages/akutil-react/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ak-util-react",
+  "name": "akutil-react",
   "version": "0.0.0",
   "description": "",
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single ak-util-react"
+    "prepublish": "cd .. && npm run prepublish/single akutil-react"
   },
   "files": [
     "dist"
