--- a/packages/akutil-shared-styles/package.json
+++ b/packages/akutil-shared-styles/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ak-util-shared-styles",
+  "name": "akutil-shared-styles",
   "version": "0.0.0",
   "description": "",
   "private": true,
