refactor(build): fixed up hot reload for storybook, avatar example works too
affects: ak-avatar, akutil-react

--- a/packages/akutil-react/package.json
+++ b/packages/akutil-react/package.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "react": "^0.14.0",
-    "skatejs-react-integration": "0.0.4"
+    "skatejs-react-integration": "0.0.4",
+    "uid": "0.0.2"
   },
   "author": "",
   "license": "ISC"
