--- a/packages/eslint-config-ak-base/package.json
+++ b/packages/eslint-config-ak-base/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "main": ".eslintrc",
   "dependencies": {
-    "eslint": "^2.0.0",
+    "eslint": "*",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.4.2",
     "eslint-plugin-mocha": "^3.0.0",
