--- a/packages/eslint-config-ak-cucumber/package.json
+++ b/packages/eslint-config-ak-cucumber/package.json
@@ -5,6 +5,7 @@
   "license": "ISC",
   "main": ".eslintrc",
   "dependencies": {
+    "eslint": "*",
     "eslint-config-ak-base": "*",
     "eslint-plugin-protractor": "^1.9.0"
   }
