--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,7 +13,7 @@ pipelines:
             - npm install --ignore-scripts
             - npm install
             - npm run lint
-            #- npm run test/browserstack/ci #debug: commented out while tests were failing
+            - npm run test/browserstack/ci
             - npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
             - npm run release
             - npm run release/changelog
@@ -24,4 +24,4 @@ pipelines:
           - npm install
           - npm run lint
           - npm run dist
-          - npm test
+          - npm run test/browserstack/ci
