chore(build): reintroduce prepublish step removed in master that is needed
affects: akutil-polyfills

--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -5,6 +5,9 @@
   "files": [
     "dist"
   ],
+  "scripts": {
+    "prepublish": "cd .. && npm run prepublish/single akutil-polyfills"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
