chore(ci): fix bitbucket pipelines install to include workaround

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -21,6 +21,7 @@ pipelines:
   default:
     - step:
         script:
+          - npm install --ignore-scripts
           - npm install
           - npm run lint
           - npm run dist
