chore(build): add webpack entrypoint for akutil-polyfills
affects: akutil-polyfills

--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -5,6 +5,7 @@
   "files": [
     "dist"
   ],
+  "webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single akutil-polyfills"
   },
