--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     }
   },
   "devDependencies": {
-    "akutil-polyfills": "file:./packages/akutil-polyfills",
     "@kadira/storybook": "^1.34.0",
+    "akutil-polyfills": "^0.0.1",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
