--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^1.34.0",
-    "akutil-polyfills": "file:./packages/akutil-polyfills",
+    "akutil-polyfills": "^0.0.1",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
