--- a/packages/ak-animation/package.json
+++ b/packages/ak-animation/package.json
@@ -10,8 +10,8 @@
   "files": [
     "dist"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Atlassian Pty. Ltd",
+  "license": "Apache-2.0",
   "dependencies": {
     "dynamics.js": "^1.0.0",
     "es6-symbol": "^3.0.2",
