--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -10,8 +10,8 @@
   "files": [
     "dist"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Atlassian Pty. Ltd",
+  "license": "Apache-2.0",
   "dependencies": {
     "skatejs": "1.0.0-beta.1",
     "skatejs-named-slots": "^0.2.0"
