--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -14,6 +14,6 @@
     "akutil-shared-styles": "^0.0.0",
     "skatejs": "1.0.0-beta.1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Atlassian Pty. Ltd",
+  "license": "Apache-2.0"
 }
