--- a/packages/akutil-cz-atlaskit-changelog/package.json
+++ b/packages/akutil-cz-atlaskit-changelog/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
-  "author": "",
-  "license": "ISC",
+  "author": "Atlassian Pty. Ltd",
+  "license": "Apache-2.0",
   "dependencies": {
     "cz-lerna-changelog": "^0.2.1",
     "lerna": "*"
