--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single akutil-polyfills"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Atlassian Pty. Ltd",
+  "license": "Apache-2.0",
   "dependencies": {
     "es6-map": "^0.1.4",
     "skatejs-named-slots": "^0.2.5",
