--- a/packages/eslint-config-ak-base/package.json
+++ b/packages/eslint-config-ak-base/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eslint-config-ak-base",
   "version": "0.0.0",
-  "author": "",
-  "license": "ISC",
+  "author": "Atlassian Pty. Ltd",
+  "license": "Apache-2.0",
   "main": ".eslintrc",
   "dependencies": {
     "eslint": "*",
