docs: fix licenses

--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -5,8 +5,12 @@
   "files": [
     "dist"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Atlassian Pty. Ltd",
+  "license": "Apache-2.0",
+  "webpack": "src/index.js",
+  "scripts": {
+    "prepublish": "cd .. && npm run prepublish/single akutil-polyfills"
+  },
   "dependencies": {
     "es6-map": "^0.1.4",
     "skatejs-named-slots": "^0.2.5",
