--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -11,6 +11,7 @@
     "dist"
   ],
   "dependencies": {
+    "akutil-react": "^0.0.0",
     "akutil-shared-styles": "^0.0.0",
     "skatejs": "1.0.0-beta.1"
   },
