--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,4 +23,4 @@ pipelines:
           - npm install
           - npm run lint
           - npm run dist
-          - npm run test/browserstack/ci
+          - npm test
