--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "akutil-common": "^0.0.0",
     "akutil-shared-styles": "^0.0.0",
-    "akutil-react": "^0.0.0",
     "skatejs": "1.0.0-beta.1"
+  },
+  "devDependencies": {
+    "akutil-react": "^0.0.0"
   }
 }
