--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "dev/single/integration": "./build/bin/dev.single.integration.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
     "jsdoc": "./node_modules/.bin/webpack --config ./jsdoc/webpack.config.js",
+    "jsdoc/single": "./build/bin/jsdoc.single.sh",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg && ./build/bin/no.js.npm.link.sh",
     "lint": "eslint --format 'node_modules/eslint-friendly-formatter' .",
     "lint-changed": "./build/bin/lint-changed.sh",
