--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "karma-mocha": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "lerna": "2.0.0-beta.20",
+    "lerna": "2.0.0-beta.22",
     "lerna-semantic-release": "^1.1.7",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
@@ -57,8 +57,7 @@
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "engines": {
     "npm": ">=3.8",
     "node": ">=6.1"
