--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "camelcase": "^3.0.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "commitizen": "^2.8.2",
     "css-loader": "^0.23.1",
     "cucumber": "^1.0.0",
     "cz-conventional-changelog": "^1.1.6",
@@ -86,6 +87,7 @@
   },
   "scripts": {
     "clean": "./node_modules/.bin/lerna exec -- rm -rf node_modules dist && rm -rf node_modules",
+    "commit": "git-cz -n",
     "create": "./build/bin/create.new.component.sh",
     "cucumber/single": "./build/bin/cucumber.single.sh",
     "dev/single": "./build/bin/dev.single.sh",
