--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -14,7 +14,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "akutil-common": "^0.0.0",
-    "akutil-shared-styles": "^1.0.0",
+    "akutil-shared-styles": "*",
     "skatejs": "1.0.0-beta.2"
   },
   "devDependencies": {
