--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "akutil-common": "^0.0.0",
-    "akutil-shared-styles": "^1.0.0",
+    "akutil-shared-styles": "*",
     "ak-layer": "*",
     "skatejs": "1.0.0-beta.2",
     "web-animations-js": "^2.2.1"
