--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -19,6 +19,10 @@
     "akutil-shared-styles": "^0.0.0",
     "ak-layer": "*",
     "skatejs": "1.0.0-beta.2",
-    "web-animations-js": "^2.2.1"
+    "web-animations-js": "^2.2.1",
+    "tether": "^1.3.2"
+  },
+  "devDependencies": {
+    "akutil-react": "^0.0.0"
   }
 }
