--- a/packages/ak-pony-button/package.json
+++ b/packages/ak-pony-button/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "akutil-polyfills": "^0.0.0",
     "akutil-shared-styles": "*",
+    "jsdoc": "^3.4.0",
     "skatejs": "1.0.0-beta.2"
   },
   "author": "",
