docs: Add task to build docs for released packages.
affects: ak-pony-button

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "dist": "./node_modules/.bin/lerna run prepublish",
     "jsdoc": "./node_modules/.bin/webpack --config ./jsdoc/webpack.config.js",
     "jsdoc/single": "./build/bin/jsdoc.single.sh",
+    "jsdoc/build/single": "./build/bin/jsdoc.build.single.sh",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg && ./build/bin/no.js.npm.link.sh",
     "lint": "eslint --format 'node_modules/eslint-friendly-formatter' .",
     "lint-changed": "./build/bin/lint-changed.sh",
@@ -104,6 +105,7 @@
     "release": "lerna-semantic-release pre && lerna-semantic-release perform",
     "release/announce": "[ -s .released-packages ] && cat .released-packages | sed 's/^/Released /' | xargs ./build/bin/hipchat_message.sh || return 0",
     "release/changelog": "if [ -s .released-packages ]; then lerna-semantic-release post; else return 0; fi",
+    "release/docs": "[ -s .released-packages ] && ./build/bin/release.docs.sh < .released-packages",
     "storybook": "start-storybook -p 9001",
     "storybook/single": "./build/bin/storybook.single.sh",
     "test": "./build/bin/test.sh",
