--- a/packages/ak-layer/package.json
+++ b/packages/ak-layer/package.json
@@ -15,8 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "akutil-common": "^0.0.0",
+    "akutil-common": "*",
     "akutil-shared-styles": "*",
-    "skatejs": "1.0.0-beta.2"
+    "skatejs": "1.0.0-beta.3"
   }
 }
