chore(build): FAB-281 - Support JSX for webcomponents.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "akutil-polyfills": "^0.0.2",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-incremental-dom": "^3.4.0",
     "babel-preset-es2015": "^6.9.0",
     "browserstacktunnel-wrapper": "^1.4.2",
     "camelcase": "^3.0.0",
@@ -27,6 +28,7 @@
     "eslint-config-ak-cucumber": "file:./packages/eslint-config-ak-cucumber",
     "eslint-config-ak-tests": "file:./packages/eslint-config-ak-tests",
     "eslint-friendly-formatter": "^2.0.5",
+    "eslint-plugin-mocha": "^3.0.0",
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0",
