--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "skatejs": "1.0.0-beta.2",
     "skatejs-named-slots": "^0.2.0",
-    "tether": "^1.3.2"
+    "tether": "nadiam84/tether#0a1aecb"
   }
 }
