--- a/packages/eslint-config-ak-base/.eslintrc
+++ b/packages/eslint-config-ak-base/.eslintrc
@@ -1,12 +1,4 @@
 {
   "name": "ak-base",
-  "extends": "airbnb",
-  "rules": {
-    "no-unused-expressions": 0,
-    "mocha/no-exclusive-tests": 2,
-    "mocha/handle-done-callback": 2
-  },
-  "plugins": [
-    "eslint-plugin-mocha"
-  ]
+  "extends": "airbnb"
 }
