--- a/packages/ak-animation/package.json
+++ b/packages/ak-animation/package.json
@@ -17,5 +17,8 @@
     "es6-symbol": "^3.0.2",
     "skatejs": "1.0.0-beta.2",
     "skatejs-named-slots": "^0.2.5"
+  },
+  "devDependencies": {
+    "akutil-react": "^0.0.1"
   }
 }
