--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -18,7 +18,7 @@
     "akutil-common": "*",
     "akutil-shared-styles": "*",
     "ak-layer": "*",
-    "skatejs": "1.0.0-beta.2",
+    "skatejs": "v1.0.0-beta.6",
     "web-animations-js": "^2.2.1",
     "tether": "^1.3.2"
   },
