--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -13,8 +13,7 @@
   "author": "Atlassian Pty. Ltd",
   "license": "Apache-2.0",
   "dependencies": {
-    "skatejs": "1.0.0-beta.2",
-    "skatejs-named-slots": "^0.2.0",
+    "skatejs": "v1.0.0-beta.6",
     "tether": "nadiam84/tether#0a1aecb"
   }
 }
