--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,6 +16,7 @@ pipelines:
             - npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
             - npm run release
             - npm run release/changelog
+            - npm run release/docs
             - npm run release/announce
   default:
     - step:
