--- a/packages/ak-pony-button/package.json
+++ b/packages/ak-pony-button/package.json
@@ -16,6 +16,9 @@
     "jsdoc": "^3.4.0",
     "skatejs": "1.0.0-beta.2"
   },
+  "devDependencies": {
+    "akutil-react": "^0.0.1"
+  },
   "author": "",
   "license": "ISC"
 }
