--- a/package.json
+++ b/package.json
@@ -91,9 +91,9 @@
     "create": "./build/bin/create.new.component.sh",
     "cucumber/single": "./build/bin/cucumber.single.sh",
     "dev/single": "./build/bin/dev.single.sh",
-    "dev/single/integration": "./build/bin/dev.single.integration.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
-    "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg && ./build/bin/no.js.npm.link.sh",
+    "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg && npm run lerna/link",
+    "lerna/link": "./build/bin/no.js.npm.link.sh",
     "lint": "eslint --format 'node_modules/eslint-friendly-formatter' .",
     "lint-changed": "./build/bin/lint-changed.sh",
     "prepublish/single": "./build/bin/prepublish.single.sh",
