--- a/docker-compose-integration.yml
+++ b/docker-compose-integration.yml
@@ -31,7 +31,7 @@ services:
       SCOPE:
     command: 'bash -c
             "
-              npm run lerna/link
+              npm install
               && npm run storybook/single \"$SCOPE\"
             "'
   cucumber:
@@ -53,7 +53,7 @@ services:
               echo \"waiting for hub\"
               && `npm bin`/wait-on tcp:hub:4444
               && echo \"waiting for dev\"
-              && `npm bin`/wait-on tcp:dev:9001
+              && `npm bin`/wait-on http://dev:9001/static/preview.bundle.js
               && echo \"running tests\"
               && npm run test/single/integration \"$SCOPE\"
              "'
