--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mocha": "^2.5.3",
     "precommit-hook": "^3.0.0",
     "protractor": "^3.3.0",
+    "protractor-console": "^2.0.1",
     "protractor-cucumber-framework": "^0.6.0",
     "raw-loader": "^0.5.1",
     "react": "^15.1.0",
