style: fix lints

--- a/packages/eslint-config-ak-base/.eslintrc
+++ b/packages/eslint-config-ak-base/.eslintrc
@@ -2,6 +2,6 @@
   "name": "ak-base",
   "extends": "airbnb",
   "rules": {
-    "no-param-reassign": 0
+    "no-param-reassign": ["error", { "props": false }]
   }
 }
