--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "dev/single": "./build/bin/dev.single.sh",
     "dev/single/integration": "./build/bin/dev.single.integration.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
+    "docs/single": "./build/bin/docs.single.sh",
     "jsdoc/single": "./build/bin/jsdoc.single.sh",
     "jsdoc/build/single": "./build/bin/jsdoc.build.single.sh",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg && ./build/bin/no.js.npm.link.sh",
