--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0",
     "jsdoc": "^3.4.0",
-    "jsdoc-webpack-plugin": "^0.0.1",
     "karma": "^1.1.0",
     "karma-browserstack-launcher": "^1.0.1",
     "karma-chai-plugins": "^0.7.0",
@@ -79,6 +78,7 @@
     "!win32"
   ],
   "pre-commit": [
+    "docs",
     "lint-changed",
     "validate"
   ],
@@ -95,9 +95,8 @@
     "dev/single": "./build/bin/dev.single.sh",
     "dev/single/integration": "./build/bin/dev.single.integration.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
+    "docs": "./build/bin/docs.all.sh",
     "docs/single": "./build/bin/docs.single.sh",
-    "jsdoc/single": "./build/bin/jsdoc.single.sh",
-    "jsdoc/build/single": "./build/bin/jsdoc.build.single.sh",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg && ./build/bin/no.js.npm.link.sh",
     "lint": "eslint --format 'node_modules/eslint-friendly-formatter' .",
     "lint-changed": "./build/bin/lint-changed.sh",
