--- a/packages/akutil-react/package.json
+++ b/packages/akutil-react/package.json
@@ -12,8 +12,8 @@
   ],
   "dependencies": {
     "react": "^0.14.0",
-    "skatejs-react-integration": "0.0.4",
-    "uid": "0.0.2"
+    "skatejs-react-integration": "^0.0.5",
+    "uid": "^0.0.2"
   },
   "author": "Atlassian Pty. Ltd",
   "license": "Apache-2.0"
