--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "cz-conventional-changelog": "^1.1.6",
     "cz-lerna-changelog": "0.2.1",
     "eslint": "^2.13.1",
-    "eslint-config-ak-base": "file:./packages/eslint-config-ak-base",
-    "eslint-config-ak-cucumber": "file:./packages/eslint-config-ak-cucumber",
-    "eslint-config-ak-tests": "file:./packages/eslint-config-ak-tests",
+    "eslint-config-ak-base": "^1.0.2",
+    "eslint-config-ak-cucumber": "^1.0.2",
+    "eslint-config-ak-tests": "^1.0.2",
     "eslint-friendly-formatter": "^2.0.5",
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
