--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "jsdoc-to-markdown": "^1.3.6",
     "json-loader": "^0.5.4",
-    "karma": "1.1.0",
+    "karma": "^1.1.0",
     "karma-browserstack-launcher": "^1.0.1",
     "karma-chai-plugins": "^0.7.0",
     "karma-chrome-launcher": "^1.0.1",
