--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
     "json-loader": "^0.5.4",
-    "karma": "1.1.0",
+    "karma": "^1.1.0",
     "karma-browserstack-launcher": "^1.0.1",
     "karma-chai-plugins": "^0.7.0",
     "karma-chrome-launcher": "^1.0.1",
@@ -59,6 +59,8 @@
     "semantic-release": "~4.3.0",
     "stats.js": "^0.16.0",
     "style-loader": "^0.13.1",
+    "svg-url-loader": "^1.0.3",
+    "svgo-loader": "^1.1.0",
     "validate-commit-message": "^3.0.1",
     "wait-on": "^1.5.2",
     "webpack": "^1.13.1",
