--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -14,6 +14,6 @@
   "dependencies": {
     "es6-map": "^0.1.4",
     "skatejs-named-slots": "^0.2.5",
-    "webcomponents.js": "skatejs/webcomponentsjs#skate-v1"
+    "webcomponents.js": "webcomponents/webcomponentsjs#b77ca74"
   }
 }
