--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-chai-plugins": "^0.7.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
+    "karma-junit-reporter": "^1.1.0",
     "karma-mocha": "^1.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
