--- a/packages/eslint-config-ak-base/.eslintrc
+++ b/packages/eslint-config-ak-base/.eslintrc
@@ -3,5 +3,10 @@
   "extends": "airbnb",
   "rules": {
     "no-param-reassign": ["error", { "props": false }]
+  },
+  "settings": {
+    "react": {
+      "pragma": "vdom"
+    }
   }
 }
