--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0",
+    "json-loader": "^0.5.4",
     "karma": "^1.1.0",
     "karma-browserstack-launcher": "^1.0.1",
     "karma-chai-plugins": "^0.7.0",
