--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "release": "lerna-semantic-release pre && lerna-semantic-release perform",
     "release/announce": "[ -s .released-packages ] && cat .released-packages | sed 's/^/Released /' | xargs ./build/bin/hipchat_message.sh || return 0",
     "release/changelog": "if [ -s .released-packages ]; then lerna-semantic-release post; else return 0; fi",
-    "storybook": "start-storybook -p 9001",
+    "storybook": "start-storybook -p 9001 -c ./build/storybook",
     "storybook/single": "./build/bin/storybook.single.sh",
     "test": "./build/bin/test.sh",
     "test/browserstack": "./build/bin/test.browserstack.sh",
