--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,17 +5,10 @@ pipelines:
       - step:
           script:
             - ./build/bin/last_commit_has_changes.sh || exit 0
-            - bash -c "git remote set-url origin https://"$BITBUCKET_USER":"\'$BITBUCKET_PASSWORD\'"@bitbucket.org/atlassian/atlaskit.git/"
-            - bash -c "git branch --set-upstream-to origin/$BITBUCKET_BRANCH"
-            - bash -c "git config --global user.email 'aui-team@atlassian.com'"
-            - bash -c "git config --global user.name 'AUI team account'"
-            - bash -c "git config --global push.default simple"
-            - bash -c "git fetch --tags"
-            - bash -c "git tag --list" #debug
             - npm install
             - npm run lint
             - npm run test/browserstack/ci
-            - npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
+            - ./build/bin/prep_for_release.sh
             - npm run release
             - npm run release/changelog
             - npm run release/announce
