--- a/packages/eslint-config-ak-base/.eslintrc
+++ b/packages/eslint-config-ak-base/.eslintrc
@@ -1,6 +1,9 @@
 {
   "name": "ak-base",
   "extends": "airbnb",
+  "plugins": [
+    "react"
+  ],
   "rules": {
     "no-param-reassign": ["error", { "props": false }]
   },
