Upgrade skate, build toolbar demo.

--- a/packages/editorkit-toolbar/package.json
+++ b/packages/editorkit-toolbar/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "editorkit-formatting-toolbar",
+  "name": "editorkit-toolbar",
   "version": "0.1.0",
   "description": "",
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single editorkit-formatting-toolbar",
+    "prepublish": "cd .. && npm run prepublish/single editorkit-toolbar",
     "pre-release": "lerna-semantic-release pre"
   },
   "private": true,
@@ -15,11 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "akutil-common": "^0.0.1",
-    "akutil-react": "^0.0.1",
-    "akutil-shared-styles": "*",
     "ak-layer": "*",
-    "skatejs": "1.0.0-beta.2",
+    "akutil-common": "0.0.3",
+    "akutil-react": "0.0.3",
+    "akutil-shared-styles": "*",
+    "classnames": "^2.2.5",
+    "editorkit-icons": "*",
+    "skatejs": "1.0.0-beta.7",
     "web-animations-js": "^2.2.1"
   }
 }
