fix: fixed troubles with switching between stories
affects: ak-inline-dialog, ak-layer, akutil-common, akutil-polyfills

--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -14,6 +14,6 @@
   "license": "Apache-2.0",
   "dependencies": {
     "skatejs": "v1.0.0-beta.6",
-    "tether": "nadiam84/tether#0a1aecb"
+    "tether": "^1.3.2"
   }
 }
