--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -18,9 +18,8 @@
     "akutil-common": "^0.0.3",
     "akutil-shared-styles": "*",
     "ak-layer": "*",
-    "skatejs": "v1.0.0-beta.6",
-    "web-animations-js": "^2.2.1",
-    "tether": "^1.3.2"
+    "skatejs": "v1.0.0-beta.7",
+    "web-animations-js": "^2.2.1"
   },
   "devDependencies": {
     "akutil-react": "^0.0.0"
