--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -3,7 +3,7 @@
   "version": "53.0.0",
   "description": "",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "src/register.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single ak-inline-dialog",
     "pre-release": "lerna-semantic-release pre"
