--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-ak-stories": "^2.0.0",
     "eslint-config-ak-tests": "^1.0.2",
     "eslint-friendly-formatter": "^2.0.5",
+    "glob": "^7.0.5",
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0",
