chore: fix prepublishing scripts

--- a/packages/ak-layer/package.json
+++ b/packages/ak-layer/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single ak-layer",
+    "prepublish": "cd ../.. && npm run prepublish/single ak-layer",
     "pre-release": "lerna-semantic-release pre"
   },
   "private": true,
