--- a/packages/akutil-cucumber/package.json
+++ b/packages/akutil-cucumber/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single akutil-cucumber"
+    "prepublish": "cd ../.. && npm run prepublish/single akutil-cucumber"
   },
   "files": [
     "dist"
