--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cucumber": "^1.2.0",
     "cz-conventional-changelog": "^1.1.6",
     "cz-lerna-changelog": "0.2.1",
+    "dmd": "^1.4.1",
     "dmd-bitbucket": "^0.1.9",
     "eslint": "^2.13.1",
     "eslint-config-ak-base": "^1.0.3",
@@ -32,6 +33,7 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0",
     "jsdoc": "^3.4.0",
+    "jsdoc-parse": "^1.2.7",
     "jsdoc-to-markdown": "^1.3.6",
     "json-loader": "^0.5.4",
     "karma": "^1.1.0",
