--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "akutil-common": "^0.0.3",
     "akutil-shared-styles": "*",
+    "classnames": "^2.2.5",
     "skatejs": "1.0.0-beta.7"
   },
   "devDependencies": {
