--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -18,5 +18,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "akutil-react": "^0.0.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
   }
 }
