--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,6 +5,7 @@ pipelines:
       - step:
           script:
             - ./build/bin/last_commit_has_changes.sh || exit 0
+            - ./build/bin/setup_hosts.sh
             - npm install
             - npm run lint
             - npm run test/browserstack/ci
