--- a/packages/editorkit-dropdown/package.json
+++ b/packages/editorkit-dropdown/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "src/index.register.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single editorkit-dropdown",
     "pre-release": "lerna-semantic-release pre"
@@ -12,12 +12,12 @@
   "files": [
     "dist"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Atlassian Pty Ltd",
+  "license": "Apache-2.0",
   "dependencies": {
     "ak-layer": "*",
-    "akutil-common": "0.0.3",
-    "akutil-react": "0.0.3",
+    "akutil-common": "*",
+    "akutil-react": "*",
     "akutil-shared-styles": "*",
     "classnames": "^2.2.5",
     "skatejs": "1.0.0-beta.7",
