--- a/packages/akutil-cz-atlaskit-changelog/package.json
+++ b/packages/akutil-cz-atlaskit-changelog/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.3",
   "description": "",
   "main": "index.js",
-  "author": "Atlassian Pty. Ltd",
+  "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
     "cz-lerna-changelog": "^0.2.1",
