--- a/packages/akutil-react/package.json
+++ b/packages/akutil-react/package.json
@@ -15,6 +15,6 @@
     "skatejs-react-integration": "^0.0.5",
     "uid": "^0.0.2"
   },
-  "author": "Atlassian Pty. Ltd",
+  "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0"
 }
