--- a/packages/akutil-shared-styles/package.json
+++ b/packages/akutil-shared-styles/package.json
@@ -7,6 +7,6 @@
     "dist",
     "src"
   ],
-  "author": "Atlassian Pty. Ltd",
+  "author": "Atlassian Pty Ltd",
   "license": "Atlassian Design Guidelines License"
 }
