--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -10,7 +10,7 @@
   "files": [
     "dist"
   ],
-  "author": "Atlassian Pty. Ltd",
+  "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
     "akutil-common": "^0.1.0",
