--- a/packages/ak-layer/package.json
+++ b/packages/ak-layer/package.json
@@ -12,8 +12,8 @@
   "files": [
     "dist"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Atlassian Pty Ltd",
+  "license": "Apache-2.0",
   "dependencies": {
     "akutil-common": "^0.1.0",
     "akutil-shared-styles": "*",
