--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -10,7 +10,7 @@
   "files": [
     "dist"
   ],
-  "author": "Atlassian Pty. Ltd",
+  "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
     "skatejs": "v1.0.0-beta.7",
