--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -14,7 +14,7 @@
     "akutil-shared-styles": "*",
     "skatejs": "1.0.0-beta.7"
   },
-  "author": "Atlassian Pty. Ltd",
+  "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
     "akutil-react": "^0.0.3"
