--- a/packages/eslint-config-ak-stories/package.json
+++ b/packages/eslint-config-ak-stories/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-ak-stories",
   "version": "2.0.0",
-  "author": "Atlassian Pty. Ltd",
+  "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "main": ".eslintrc",
   "dependencies": {
