docs: add repository URL to packages

--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -15,5 +15,9 @@
   "dependencies": {
     "skatejs": "v1.0.0-beta.7",
     "tether": "^1.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
   }
 }
