--- a/packages/ak-layer/package.json
+++ b/packages/ak-layer/package.json
@@ -18,5 +18,9 @@
     "akutil-common": "^0.1.0",
     "akutil-shared-styles": "*",
     "skatejs": "v1.0.0-beta.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
   }
 }
