--- a/packages/akutil-cucumber/package.json
+++ b/packages/akutil-cucumber/package.json
@@ -13,6 +13,9 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "private": true,
-  "dependencies": {
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
   }
 }
