--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -15,5 +15,9 @@
     "es6-map": "^0.1.4",
     "skatejs-named-slots": "^0.2.9",
     "webcomponents.js": "webcomponents/webcomponentsjs#b77ca74"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
   }
 }
