--- a/packages/akutil-react/package.json
+++ b/packages/akutil-react/package.json
@@ -16,5 +16,9 @@
     "uid": "^0.0.2"
   },
   "author": "Atlassian Pty Ltd",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
+  }
 }
