--- a/packages/akutil-shared-styles/package.json
+++ b/packages/akutil-shared-styles/package.json
@@ -8,5 +8,9 @@
     "src"
   ],
   "author": "Atlassian Pty Ltd",
-  "license": "Atlassian Design Guidelines License"
+  "license": "Atlassian Design Guidelines License",
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
+  }
 }
