--- a/packages/eslint-config-ak-cucumber/package.json
+++ b/packages/eslint-config-ak-cucumber/package.json
@@ -8,5 +8,9 @@
     "eslint": "^2.0.0",
     "eslint-config-ak-base": "*",
     "eslint-plugin-protractor": "^1.9.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
   }
 }
